* Fix checkmark spacing * Fix icon display

--- a/static/css/admin/jquery.xmleditor.css
+++ b/static/css/admin/jquery.xmleditor.css
@@ -74,7 +74,7 @@
 }
 .xml_dialog .ui-icon {
 	display: block;
-	padding: .4em .3em;
+	padding: inherit;
 }
 .xml_dialog .ui-resizable-se {
 	width: 12px;
@@ -95,11 +95,13 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 1011;
 }
 
 .ui-widget-content {
 	border: 1px solid #aaaaaa;
 	background: #ffffff;
+	z-index: 1012;
 }
 
 .xml_export_filename {
@@ -648,7 +650,6 @@
 	background-color: #ffffff;
 	z-index: 999;
 	width: 100%;
-	background-color: #ffffff;
 }
 
 .xml_menu_bar {
@@ -667,7 +668,7 @@
 	*display: inline;
 	font-size: 14px;
 	margin: 0;
-	text-indent: 0px;
+	text-indent: 0;
 }
 
 .xml_menu_bar > ul > li > a > span {
@@ -724,6 +725,10 @@
 .xml_menu_bar.active > ul > li > ul > li {
 	padding: 5px 7px;
 	cursor: pointer;
+}
+
+.xml_menu_bar.active > ul > li > ul > li > span {
+	text-indent: 0;
 }
 
 .xml_menu_bar.active > ul > li > ul > .disabled {
